feature(architecture): redefine core architecture and define BaseEntity
