# ironlog-security/src/main/java/dev/ironcorelabs/ironlog/security/model/entities/AppUser.java
@@ -1,9 +1,11 @@
 package dev.ironcorelabs.ironlog.security.model.entities;
 
+import dev.ironcorelabs.ironlog.core.model.entity.BaseEntity;
 import dev.ironcorelabs.ironlog.security.model.enums.UserRole;
 import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
 
 import java.util.List;
@@ -13,16 +15,20 @@ import java.util.UUID;
 @AllArgsConstructor
 @NoArgsConstructor
 @Entity
+@EqualsAndHashCode(callSuper = false)
 @Table(schema = "sec", name = "app_user", indexes = {@Index(columnList = "enabled")})
-public class AppUser {
+public class AppUser extends BaseEntity {
 
     @Id
     @GeneratedValue(generator = "user_gen", strategy = GenerationType.SEQUENCE)
     @SequenceGenerator(name = "user_gen", schema = "sec", sequenceName = "user_seq", allocationSize = 1)
     private Long id;
 
-    @Column(name = "full_name", nullable = false)
-    private String fullName;
+    @Column(name = "first_name", nullable = false)
+    private String firstName;
+
+    @Column(name = "last_name", nullable = false)
+    private String lastName;
 
     @Column(name = "password", nullable = false)
     private String password;
@@ -36,9 +42,6 @@ public class AppUser {
 
     @Column(name = "enabled", nullable = false)
     private Boolean enabled;
-
-    @Column(name = "external_id", unique = true, nullable = false)
-    private UUID externalId = UUID.randomUUID();
 
     @OneToMany(mappedBy = "user")
     private List<RefreshToken> refreshTokens;
